--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body{
     border-bottom-right-radius: 10px;
 }
 .header .logo img{
-    width: 130ppx;
+    width: 130px;
     margin-top: 25px;
     margin: 22px;
     margin-left: 20px;
